[package]
name = "minidecaf-frontend"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
minidecaf = { git = "https://github.com/decaf-lang/minidecaf", branch = "mashplant" }

[profile.release]
lto = true
panic = "abort"

# https://github.com/rustwasm/wasm-pack/issues/886
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-mutable-globals"]
